--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -108,6 +108,7 @@
     .rodape {
         margin: 0 !important;
         padding: 0 !important;
+        background: #ccc;
     }
 
     .rodape-info {
