--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -138,6 +138,7 @@
         margin: 0;
         border: 0;
         padding: 0;
+        background: transparent;
     }
 
     #NavSuperior .cabecalho {
