--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -140,6 +140,10 @@
         padding: 0;
         background: transparent;
     }
+    
+    #NavSuperior:before {
+        display: none;
+    }
 
     #NavSuperior .cabecalho {
         background: #eee;
