--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1030,7 +1030,7 @@
         height: 40px !important;
         max-width: 100% !important;
         width: 100% !important;
-        border: none !important;
+        border: 1px solid #ccc !important;
         border-radius: 5px !important;
         display: block;
         background: #fff !important;
