--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1731,19 +1731,21 @@
 
     #CadastroAbas li {
         background: none;
+        border: 1px solid #eee;
+         width: 100%;
+         display: block;
     }
     #ProdAbas li a, #ProdAbas .aberta a {
         background-color: #f3f3f3;
        
-        border: 1px solid #eee;
+        
         margin: 10px 0;
         color: #9d9d9d;
         display: block;
         font: 400 0.65rem/1 "Lato",sans-serif;
         text-transform: uppercase;
         padding: 10px 0;
-        float: left;
-        width: 100%;
+       
     }
 
     #CadastroAbas li, #ProdAbas li, #CadastroAbas .aberta, #ProdAbas .aberta {
