--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1739,7 +1739,7 @@
         margin: 20px 0 !important;
         padding: 0 !important;
         background: #eee !important;
-        border: none;
+        border: none !important;
         float: none !important;
         border-radius: 0 !important;
     }
