--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -177,6 +177,7 @@
     .menu-conta {
         max-width: 50px;
         min-width: 50px;
+        width: 50px;
         height: 50px;
         background: url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/conta-tema.png?v=2') no-repeat center center;
         display: table-cell;
@@ -186,6 +187,7 @@
     .hamburguer {
         max-width: 50px;
         min-width: 50px;
+        width: 50px;
         height: 50px;
         background: url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/hamburguer-tema.png?v=2') no-repeat center center;
         display: table-cell;
