--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1290,7 +1290,7 @@
         margin: 0px;
         width: 100%;
         max-width: 100%;
-        padding: 20px 15px !important;
+        padding: 0 15px !important;
         text-transform: uppercase !important;
         font: 700 16px/49px "Open Sans",sans-serif;
     }
