--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -33,7 +33,7 @@
     #Body {
         width: 100% !important; 
         margin: 0 !important;
-        overflow-x: hidden;
+        overflow: hidden;
     }
 
     .timelogotray {
