--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1252,6 +1252,10 @@
         display: none;
     }
     
+    .container2 {
+        background: none;
+    }
+    
 
     .central-saudacao {
         margin: 20px 0;
