--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1623,7 +1623,7 @@
     #Page .text, #Page .select, #Page .textarea, #Page select, #Page textarea {
         height: 40px !important;
         background: #fff !important;
-        border: 1px solid #eee;
+        border: 1px solid #eee !important;
         border-radius: 5px;
     }
 
