--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -75,6 +75,10 @@
         padding: 0 !important;
         border: none;
     }
+    
+    #div2bg {
+        border-radius: 0 !important;
+    }
 
     #NavVisitados, 
     .nav-brands, 
