--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1860,7 +1860,7 @@
         display: block;
 
         border-radius: 5px;
-        width: 300px;
+        width: 100%;
         height: 40px;
         margin: 0 auto;
     }
