--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1139,7 +1139,7 @@
         top: 3px;
         right: 5px;
         font-size: 11px !important;
-        background: #09A5CB;
+        background: red;
         color: white;
         width: 15px;
         height: 15px;
