--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -108,6 +108,7 @@
         position: relative;
         top: 60px;
         margin: 0 !important;
+        border-radius: 0 !important;
     }
 
     .rodape {
