--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2166,7 +2166,7 @@
     }
 
     .botao-continuar-comprando .botao-commerce-img {
-        
+        color: #fff;
         white-space: nowrap;
     }
 
