--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2220,10 +2220,9 @@
     }
 
     .bt-continuar-comprando a {
-        width: 145px;
-        height: 36px;
+        border: medium none;
         margin-bottom: 20px;
-        border: none;
+        padding: 5px 10px;
     }
 
     .botao-prosseguir-compra {
