--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1859,9 +1859,10 @@
         margin: 10px 0;
     }
     #bt_comprar button {
-        background: url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-comprar2.png?v=23') !important;
+        
         display: block;
-
+        color: #fff;
+        font-size: 20px;
         border-radius: 5px;
         width: 100%;
         height: 40px;
