--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -756,7 +756,7 @@
         float: right;
         border: medium none !important;
         margin-top: 3px;
-        padding: 12px;
+        padding: 11px 8px;
         margin-left: 10px;
     }
 
