--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -47,6 +47,7 @@
         display: block;
         width: 100%;
         top: 0;
+        height: 64px;
         background: #fff;
         z-index: 9999;
         padding-bottom: 5px;
