--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -54,6 +54,11 @@
         padding: 10px;
         box-shadow: 0 0 5px rgba(43, 44, 42, 0.32);
     }
+    
+    header > h1 {
+        width: 100px;
+        margin: 12px 0 0 0 !important;
+    }
 
     .banner-header {
         display: none;
