--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1838,6 +1838,16 @@
         max-width: 100% !important;;
         width: 100%;
     }
+    
+    #descricao * {
+        font-size: 12px;
+        color: #7b7b7b;
+    }
+    
+    #descricao embed, #descricao object {
+        max-width: 100%;
+        width: 100%;
+    }
 
     #CadastroAbas li {
         background: none;
