--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -58,6 +58,7 @@
     header > h1, header > h2 {
         width: 100px;
         margin: 12px 0 0 0 !important;
+        max-height: 45px;
     }
 
     .banner-header {
