--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -43,7 +43,7 @@
     }
 
     header {
-        position: relative;
+        position: fixed;
         display: block;
         width: 100%;
         top: 0;
