--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -84,6 +84,10 @@
         border: none;
         top: 64px;
     }
+    
+    .bottom {
+        display: none;
+    }
 
     #div2bg {
         border-radius: 0 !important;
