--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -121,6 +121,7 @@
         position: relative;
         margin: 0 !important;
         border-radius: 0 !important;
+        top: 64px;
     }
 
     .rodape {
