--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -60,6 +60,10 @@
         margin: 12px 0 0 0 !important;
         max-height: 45px;
     }
+    
+    header img {
+        max-height: 45px;
+    }
 
     .banner-header {
         display: none;
