--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -65,6 +65,7 @@
         height: 45px;
         position: absolute;
         left: 10px;
+        max-width: 100px;
         top: 50%;
         margin-top: -22px;
     }
