--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -59,6 +59,7 @@
         max-width: 126px;
         margin: 12px 0 0 0 !important;
         max-height: 45px;
+        font-size: 15px;
     }
     
     .finish-body {
@@ -69,7 +70,7 @@
         height: 45px;
         position: absolute;
         left: 10px;
-        max-width: 126px;
+        max-width: 110px;
         top: 50%;
         margin-top: -22px;
     }
