--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2323,6 +2323,10 @@
         float: left;
         width: 100%;
     }
+    
+    .container3.caixa-botoes{
+        margin: 20px 0;
+    }
 
     .bt-cupom {
         background: url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-calcular.png?v=5') !important;
