--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2252,6 +2252,14 @@
         margin-bottom: -33px !important;
     }
 
+    #atualizaFormas .tablePags td {
+        vertical-align: top;
+    }
+    
+    .txt-forma-pagto span.item-parcela {
+        min-height: 40px;
+    }
+        
     #formas_envio_frete .valores_carrinho {
         margin-top: -25px;
         float: right;
