--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2260,7 +2260,7 @@
         min-height: 40px;
     }
     
-    .txt-forma-pagto td img {
+    div#atualizaFormas img {
         width: 100px;
     }
         
