--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2456,6 +2456,8 @@
 
     .lista-formas-pagamento li {
         position: relative;
+        padding-bottom: 20px;
+        border-bottom: 3px solid #eee;
     }
 
     .mensagem-popup {
