--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2478,6 +2478,10 @@
         top: 0;
         right: 0;
     }
+    
+    #nome_titular_cartao {
+        max-width: 300px;
+    }
 
     #FormasPagamento legend {
         background: none repeat scroll 0% 0% transparent;
