--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2482,6 +2482,11 @@
     #nome_titular_cartao {
         max-width: 300px;
     }
+    
+    input[name="numero_cartao"] {
+        width: 300px;
+    }
+
 
     #FormasPagamento legend {
         background: none repeat scroll 0% 0% transparent;
