--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2493,7 +2493,7 @@
     }
     #enviar_cartao{
         background: url("https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-pagar.png") repeat scroll 0% 0% transparent !important;
-        padding: 30px 18px;
+        padding: 18px 30px !important;
         display: block;
     }
     
