--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2507,7 +2507,7 @@
         width: 90px !important;
     }
     
-    #lightwindow_contents .img_lighwindow {
+    #lightwindow_contents img {
         max-width: 100% !important;
     }
     
