--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1955,6 +1955,7 @@
         border-radius: 5px;
         width: 104px;
         height: 40px;
+        font-size: 0 !important;
     }
     #cepbox a img {
         display: none;
