--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2219,7 +2219,10 @@
     .formulario-contato input, .formulario-contato textarea {
         max-width: 90% !important;
     }
-    
+    .formulario-contato {
+        display: block;
+        margin-bottom: 20px;
+    }
     .formulario-contato input[type='image'] {
     background: url("https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-enviar-contato.png") repeat scroll 0% 0% transparent !important;
     padding: 20px 40px !important;
